--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,7 +1,7 @@
 name: "Cronjob"
 on:
   schedule:
-    - cron: '15 * * * *'
+    - cron: '1 * * * *'
 
 jobs:
   update-weather:
@@ -12,7 +12,7 @@ jobs:
       - name: Generate README
         uses: huantt/weather-forecast@v1.0.6
         with:
-          city: HaNoi
+          city: Behror
           days: 7
           weather-api-key: ${{ secrets.WEATHER_API_KEY }}
           template-file: 'README.md.template'
