--- a/README.md.template
+++ b/README.md.template
@@ -43,6 +43,8 @@ I'm a passionate app developer with a knack for creating awesome and user-friend
 I'm always open to new opportunities and collaborations. Feel free to reach out if you want to discuss a project or just chat about technology!
 
 <!-- Footer Section -->
+<!-- Footer Section -->
+
 <p align="center">
   <img src="https://komarev.com/ghpvc/?username=hy-25" alt="Profile Views">
 </p>
