--- a/README.md.template
+++ b/README.md.template
@@ -45,8 +45,10 @@ I'm always open to new opportunities and collaborations. Feel free to reach out 
 <!-- Footer Section -->
 <!-- Footer Section -->
 
-{{ template "hourly-table" $.TodayWeather.HourlyWeathers }}
+###Behror Weather Today. 
 {{ formatTime .UpdatedAt }}
+{{ template "daily-table" .Weathers }}
+
 
 <p align="center">
   <img src="https://komarev.com/ghpvc/?username=hy-25" alt="Profile Views">
