--- a/README.md.template
+++ b/README.md.template
@@ -45,8 +45,8 @@ I'm always open to new opportunities and collaborations. Feel free to reach out 
 <!-- Footer Section -->
 <!-- Footer Section -->
 
-### Behror Weather Today. 
-{{ formatTime .UpdatedAt }}
+### Behror Weather this Week. 
+Updated at: {{ formatTime .UpdatedAt }}
 {{ template "daily-table" .Weathers }}
 
 
